@@ -1,0 +1,13 @@
+Hey everyone, Radzion here. Today, I'm excited to share some new updates we've made to Increaser. Let's dive right in.
+
+First up, you can now expedite the creation of recurring tasks with the new 'Create Now' button. Just head to the 'Upcoming' tab of the 'Tasks' page, and if you need a recurring task to appear ahead of schedule, you can make it happen instantly. This should give you a bit more flexibility in your planning.
+
+We've also added a visual indicator on the 'Upcoming' tab to show you exactly when each recurring task is scheduled to be created. No more guessing when things will appear—it's all right there for you.
+
+On the focus side of things, the focus launcher now automatically targets 90-minute blocks. This way, you get more consistent focus durations without having to adjust manually, helping you stay in that productive flow.
+
+We've also introduced an "info" page, which is a knowledge base for Increaser tools. Right now, it has an article about the focus tool, and we'll be adding more content soon. If you're curious about how to get the most out of Increaser, it's a great place to start.
+
+Lastly, there's no longer any delay when adding a task or project directly from the focus launcher. It's now seamless and fast, just the way it should be.
+
+That's it for now. These updates are all about making Increaser more intuitive and efficient for you. Go ahead and try them out, and I'd love to hear your feedback. Thanks for watching, and see you next time!
